--- a/go-containerized-server-app.yaml
+++ b/go-containerized-server-app.yaml
@@ -8,9 +8,9 @@ spec:
     app: go-containerized-server
   ports:
     - protocol: TCP
-      port: 80
+      port: 8081
       targetPort: 8081
-      nodePort: 30001
+      nodePort: 31234
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -36,4 +36,6 @@ spec:
           name: go-containerized-server
           imagePullPolicy: Never
           resources: {}
+          ports:
+            - containerPort: 8081
 status: {}
